2004-08-21  David Kastrup  <dak@gnu.org>

	* net/ange-ftp.el (ange-ftp-hash-entry-exists-p)
	(ange-ftp-file-entry-p, ange-ftp-file-symlink-p): Since the code
	has been converted to use hashtables, the relation `nil=none' is
	no longer valid, as `nil' is not a hashtable.  This patch tries to
	reduce the number of resulting errors.

2004-08-21  John Paul Wallington  <jpw@gnu.org>

	* subr.el (process-kill-without-query): Made obsolete in
	version	21.4, not 21.5.

	* log-edit.el (vc-comment-ring, vc-comment-ring-index)
	(vc-previous-comment, vc-next-comment)
	(vc-comment-search-reverse, vc-comment-search-forward)
	(vc-comment-to-change-log): Likewise.

	* international/latin1-disp.el (latin1-char-displayable-p): Likewise.

2004-08-21  Peter Seibel  <peter@javamonkey.com>  (tiny patch)

	* emacs-lisp/cl-indent.el (lisp-indent-defmethod):
	Correct indentation of DEFMETHODS with non-standard method
	combinations (e.g., PROGN, MIN, MAX).

2004-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* startup.el (normal-top-level-add-subdirs-to-load-path):
	Avoid unnecessarily checking system-type.
	(normal-top-level): Set TERM to "dumb".  Simplify.

	* avoid.el (mouse-avoidance-ignore-p): New fun.
	Also ignore switch-frame, select-window, double, and triple clicks.
	(mouse-avoidance-banish-hook, mouse-avoidance-exile-hook)
	(mouse-avoidance-fancy-hook): Use it.

2004-08-20  Zoran Milojevic  <zoran@sipquest.com>  (tiny change)

	* avoid.el (mouse-avoidance-nudge-mouse)
	(mouse-avoidance-banish-destination): Stay within the current window
	to avoid problems with mouse-autoselect-window.

2004-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-parse.el (cvs-parse-table, cvs-parse-commit): Try to adapt to
	the newer format of some messages in cvs-1.12.1.

2004-08-19  Masatake YAMATO  <jet@gyve.org>

	* emacs-lisp/elp.el (elp-results-symname-map): New keymap.
	(elp-results-jump-to-definition-by-mouse)
	(elp-results-jump-to-definition, elp-output-insert-symname): New funs.