@@ -1,3 +1,8 @@
+2004-08-22  Masatake YAMATO  <jet@gyve.org>
+
+	* cvs-status.el (cvs-status-checkout): New function.
+	(cvs-status-mode-map): Add a key definition for `cvs-status-checkout'.
+
 2004-08-21  David Kastrup  <dak@gnu.org>
 
 	* net/ange-ftp.el (ange-ftp-hash-entry-exists-p)
